# tdr

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
.github/workflows/: webapp-pages.yml
GRB_WEB/: h1_psd.txt  ifos_used.json  l1_psd.txt  results_bns.json  results_nsbh.json  v1_psd.txt
GRB_WEB_IP/: h1_psd.txt  l1_psd.txt  range_map_bns_m1_1.4_m2_1.4.fits  results_bns.json  results_nsbh.json  v1_psd.txt
docs/: conf.py  index.rst  installation.rst  requirements.txt  tool-description.rst  usage.rst
examples/: glg_healpix_all_bn200326517_v00.fit
gw170817/: glg_healpix_all_bn170817529_v00.fit
targ_ac_git/: README.txt  __init__.py  aux_snr_mf.py  gwosc_utils_snr_mf.py  pipeline_utils_snr_mf.py  targ_range_snr_mf.py
webapp/: README.md
webapp/backend/: __init__.py  main.py
webapp/frontend/: app.js  index.html  runtime-config.js  styles.css  theme-toggle.js
webapp/frontend/docs/: index.html  installation.html  styles.css  theme-toggle.js  usage.html
webapp/frontend/docs/assets/gw170817/: h1_psd.txt  ifos_used.txt  l1_psd.txt  range_map_bns_m1_1.4_m2_1.4.fits  results_bns.json  results_nsbh.json  v1_psd.txt
